=== HEAD

* Make add_primary_key work on h2 (jeremyevans)

* Add support for foreign key parsing on Oracle (jeremyevans)

* Add support for foreign key parsing to the jdbc adapter (jeremyevans)

* Make add_foreign_key work on HSQLDB (jeremyevans)

* Add table_select plugin for selecting table.* instead of * for model datasets (jeremyevans)

* Issue constraint_validation table deletes before inserts, so modifying constraint via drop/add in same alter_table block works (jeremyevans)

* Support add_*/remove_*/remove_all_* pg_array_to_many association methods on unsaved model objects (jeremyevans)

* Add Sybase SQLAnywhere support via new sqlanywhere and jdbc/sqlanywhere adapters (gditrick, jeremyevans)

* Add Dataset#offset for setting the offset separately from the limit (Paul Henry, jeremyevans) (#717)

=== 4.3.0 (2013-10-02)

* Fix literalization of empty blobs on MySQL (jeremyevans) (#715)

* Ensure Dataset#page_count in pagination extension is at least one (jeremyevans) (#714)

* Recognize another disconnect error in the jdbc/as400 adapter (jeremyevans)

* Make Dataset#qualify and Sequel.delay work together (jeremyevans)

* Recognize citext type as string on PostgreSQL (isc) (#710)

* Support composite keys in the rcte_tree plugin (jeremyevans)

* Support composite keys in the tree plugin (jeremyevans)

* Make Migrator.migrator_class public (robertjpayne, jeremyevans) (#708)

* Make PostgreSQL empty array literalization work correctly on PostgreSQL <8.4 (jeremyevans)

* Add Sequel extensions guide (jeremyevans)

* Add model plugins guide (jeremyevans)

* Add error_sql Database extension, allowing DatabaseError#sql to return SQL query that caused underlying exception (jeremyevans)

* Make Dataset#each_page in pagination extension return enumerator if no block is given (justinj) (#702)

=== 4.2.0 (2013-09-01)

* Support custom :flags option in mysql2 adapter (jeremyevans) (#700)

* Add implementations of Dataset#freeze and Dataset#dup (jeremyevans)
