@@ -106,6 +106,7 @@ describe Sequel::Model, "associate" do
       klass.many_to_one :par, :clone=>:par_parent, :select=>:b
       klass.one_to_many :par1s, :clone=>:par_parent1s, :order=>:b, :limit=>10, :block=>nil
       klass.many_to_many(:par2s, :clone=>:par_parent2s, :order=>:c){3}
+      klass.many_to_one :par3, :clone=>:par
       
       klass.association_reflection(:par).associated_class.should == ParParent
       klass.association_reflection(:par1s).associated_class.should == ParParent
@@ -114,12 +115,16 @@ describe Sequel::Model, "associate" do
       klass.association_reflection(:par)[:order].should == :a
       klass.association_reflection(:par).select.should == :b
       klass.association_reflection(:par)[:block].call.should == 1
+      klass.association_reflection(:par)[:eager_block].call.should == 1
       klass.association_reflection(:par1s)[:limit].should == 10
       klass.association_reflection(:par1s)[:order].should == :b
       klass.association_reflection(:par1s)[:block].should == nil
       klass.association_reflection(:par2s)[:after_load].length.should == 1
       klass.association_reflection(:par2s)[:order].should == :c
       klass.association_reflection(:par2s)[:block].call.should == 3
+
+      klass.association_reflection(:par3)[:block].call.should == 1
+      klass.association_reflection(:par3)[:eager_block].call.should == 1
     ensure
       Object.send(:remove_const, :ParParent)
     end
